Complete basic html css assignment

--- a/work/basic-html-css/index.html
+++ b/work/basic-html-css/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Sample Website</title>
-</head>
-<body>
-  <header>
-    <img class="logo" src="//placekitten.com/50/50" alt="random cat in lieu of logo"/>
-    <h1>Behold the Power of Cats</h1>
-  </header>
-  <main> 
-    REPLACE THIS LINE WITH CONTENT
-  </main>
-  <footer>
-    REPLACE THIS WITH A LINK
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Sample Website</title>
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/home.css" />
+  </head>
+  <body>
+    <header>
+      <img
+        class="logo"
+        src="//placekitten.com/50/50"
+        alt="random cat in lieu of logo"
+      />
+      <h1>Behold the Power of Cats</h1>
+    </header>
+    <main>
+      <ul class="animals">
+        <li class="animal snow-leopard">
+          <a
+            href="https://kids.nationalgeographic.com/animals/mammals/facts/bottlenose-dolphin"
+            >Bottlenose Dolphin</a
+          >
+        </li>
+        <li class="animal bottlenose-dolphin">
+          <a
+            href="https://kids.nationalgeographic.com/animals/mammals/facts/snow-leopard"
+            >Snow Leopard</a
+          >
+        </li>
+        <li class="animal flamingo">
+          <a
+            href="https://kids.nationalgeographic.com/animals/birds/facts/flamingo"
+            >Flamingo</a
+          >
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <a href="/privacy.html">Click here to go to privacy page</a>
+    </footer>
+  </body>
 </html>
