Fix bug, switch from absolute path to relative path for links

--- a/work/basic-html-css/index.html
+++ b/work/basic-html-css/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sample Website</title>
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
     <header>
@@ -38,7 +38,7 @@
       </ul>
     </main>
     <footer>
-      <a href="/privacy.html">Click here to go to privacy page</a>
+      <a href="privacy.html">Click here to go to privacy page</a>
     </footer>
   </body>
 </html>
