--- a/work/basic-html-css/privacy.html
+++ b/work/basic-html-css/privacy.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sample Website</title>
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/privacy.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/privacy.css" />
   </head>
   <body>
     <header>
@@ -30,6 +30,6 @@
         atque harum ipsa.
       </p>
     </main>
-    <footer><a href="/index.html">Click here to go to home page</a></footer>
+    <footer><a href="index.html">Click here to go to home page</a></footer>
   </body>
 </html>
